Moved GroundCoverRegistry into tablist data file
-this is part of a broader movement to eliminate inline item ID references from the core code